package ups.poo.buscaminas.excepciones;

public class CasillaYaDescubiertaException extends Exception {
    public CasillaYaDescubiertaException(String error) {
        super(error);
    }
}
