package ups.poo.buscaminas.excepciones;

public class ErrorAlCargarPartida extends Exception {
    public ErrorAlCargarPartida(String error) {
        super(error);
    }
}

