package ups.poo.buscaminas.excepciones;

public class ErrorAlGuardarPartida extends Exception {
    public ErrorAlGuardarPartida(String error) {
        super(error);
    }
}

