package ups.poo.buscaminas.excepciones;

public class OpcionInvalida extends Exception {
    public OpcionInvalida(String error) {
        super(error);
    }
}

