' Generated by UML Generator
' Encoded: nLRRRXit47tNLn1vMiNUnEcZW0IHPITH0IMkPHi83CEOvOvbjbnI8BbAq3JvzWx5lN6rQxyKw8ikdCFXcJCNyhrrO5nPo8dzIwWj62WObs3jt3aZijBXackr5dyZEvayYXmP5uPBd4psA7PXIipWjBGS2g70iXyJnev-a5Sd-4zMW509c8sTiJNvKvlRk-cCxRJ89pzh5n_HEctcXZ-AdRPNz6_l93Mb0_-ltihUiXT4q8aSNhdlxeN7fFJnowAxtYQrNrfm2EPCVrFncdKBOWBc8lWu_owSjb2WSfWyGweNLSLYxow7CxGvLiWPoxIM28h8Fe2q6EqhRGb6w3zAOVKQf313yBI1NrvVpU_dbujFovilzwVNwyLyjVmyNtVrQ8L_NP6wtz0PEVGqQZa4Sor2Hw4ZtbN76ofkNXJ8h3F07Qko3hd1Nj9RtW-2G3Ccb2EARquY6zUoBDIeMPK56hqIuuWCL8x6csjwNIiggbPYcey1hY2JTCACyKSmZJgzU98sWkEOyV7X-RTtjtV7WmS7Y-kU69RwKKwZ354vdrQ798EdTNBMtNJUKaZ6w8nihLH93hWEuJVeFdXzV8aG-RvjKUarOlxSnZw2Q8AVHjJxi6wuJoFhwAPjN6sZhve2_jLEBRys9tSq0aHRYITDlQoUgv9-Xl-BkechX0xKrB6Da0Tfge8mc6EkpU64Mw3C3rhNqDW36eYspao8Ds3_vu0zXnkQcZISF96OH-YZRiyVTOBQeGGJWZXvOlE1Xj7EDyb8DrpMeWqLjEtQOtaFKm8EfDxeXLT8Iw2yXShSx6-ZMVzMUiiKVkij9h5gXSvrrL23byrE47B6LgZA6_ypweCRmVSTq9MrjPwXCTf5nhJGEr48kb9rtJIU8Vsw_UskhQR3C9C-ZtqKl0KibU12TpAGPYKzGtulSHEj2eyRkjxIBUR2h1f-NLEdgOgjqHcOElBUDLYdoGefuQk_-NcP2JIENXCSjqve5PuAJq8IBvofh_5fw_ZBbc9KIxNRLtdm5A-DRZttwtFvCRhTWuT1qtEEegTIv2UoZBff4Xa6Z4JqA0vAONljDg1Gj8B4f-oOphoksurUQUK57S755cIdpO1xTPegg5OBxLyhXjnR-1EJ8dmtB5kt-vfOQ6roL13A9M2yKH8VAgNJyk41e_aPhemq_UTT_o4qgORgi6sWkzFqNQz_1s4lqxJJekzHvVHY_nS
' URL: http://www.plantuml.com/plantuml/uml/nLRRRXit47tNLn1vMiNUnEcZW0IHPITH0IMkPHi83CEOvOvbjbnI8BbAq3JvzWx5lN6rQxyKw8ikdCFXcJCNyhrrO5nPo8dzIwWj62WObs3jt3aZijBXackr5dyZEvayYXmP5uPBd4psA7PXIipWjBGS2g70iXyJnev-a5Sd-4zMW509c8sTiJNvKvlRk-cCxRJ89pzh5n_HEctcXZ-AdRPNz6_l93Mb0_-ltihUiXT4q8aSNhdlxeN7fFJnowAxtYQrNrfm2EPCVrFncdKBOWBc8lWu_owSjb2WSfWyGweNLSLYxow7CxGvLiWPoxIM28h8Fe2q6EqhRGb6w3zAOVKQf313yBI1NrvVpU_dbujFovilzwVNwyLyjVmyNtVrQ8L_NP6wtz0PEVGqQZa4Sor2Hw4ZtbN76ofkNXJ8h3F07Qko3hd1Nj9RtW-2G3Ccb2EARquY6zUoBDIeMPK56hqIuuWCL8x6csjwNIiggbPYcey1hY2JTCACyKSmZJgzU98sWkEOyV7X-RTtjtV7WmS7Y-kU69RwKKwZ354vdrQ798EdTNBMtNJUKaZ6w8nihLH93hWEuJVeFdXzV8aG-RvjKUarOlxSnZw2Q8AVHjJxi6wuJoFhwAPjN6sZhve2_jLEBRys9tSq0aHRYITDlQoUgv9-Xl-BkechX0xKrB6Da0Tfge8mc6EkpU64Mw3C3rhNqDW36eYspao8Ds3_vu0zXnkQcZISF96OH-YZRiyVTOBQeGGJWZXvOlE1Xj7EDyb8DrpMeWqLjEtQOtaFKm8EfDxeXLT8Iw2yXShSx6-ZMVzMUiiKVkij9h5gXSvrrL23byrE47B6LgZA6_ypweCRmVSTq9MrjPwXCTf5nhJGEr48kb9rtJIU8Vsw_UskhQR3C9C-ZtqKl0KibU12TpAGPYKzGtulSHEj2eyRkjxIBUR2h1f-NLEdgOgjqHcOElBUDLYdoGefuQk_-NcP2JIENXCSjqve5PuAJq8IBvofh_5fw_ZBbc9KIxNRLtdm5A-DRZttwtFvCRhTWuT1qtEEegTIv2UoZBff4Xa6Z4JqA0vAONljDg1Gj8B4f-oOphoksurUQUK57S755cIdpO1xTPegg5OBxLyhXjnR-1EJ8dmtB5kt-vfOQ6roL13A9M2yKH8VAgNJyk41e_aPhemq_UTT_o4qgORgi6sWkzFqNQz_1s4lqxJJekzHvVHY_nS
' Generated on: 2026-05-28T19:55:05.130031670

@startuml
skinparam classAttributeIconSize 0
hide circle

class PruebaBuscaminas {
  +{static} main(args: String[]): void
}

class GestorArchivosTest {
  -rutaTest: String = "partida.txt"
  --
  ~setUp(): void
  ~tearDown(): void
  ~testCargarPartidaExitosamente(): void
}

class GestorArchivos {
  +{static} partidaCargadaDesdeArchivo: boolean = false
  +{static} usuarioQuisoSalir: boolean = false
  -{static} RUTA_ARCHIVO_BUSCAMINAS: String = "Buscaminas/partida_guardada.txt"
  --
  +{static} guardarPartida(): void
  +cargarPartida(): boolean
}

abstract class PadreBuscaminas {
  -{static} filas: int = 10
  -{static} columnas: int = 10
  -{static} numeroMinas: int = 10
  -{static} banderas: boolean
  -{static} encontradas: boolean
  -{static} Tablero: char
  --
  +PadreBuscaminas(filas: int, columnas: int, banderas: boolean[][], encontradas: boolean[][], tablero: char[][], numeroMinas: int)
  +{static} setBanderas(banderas: boolean[][]): void
  +{static} setEncontradas(encontradas: boolean[][]): void
  +{static} setTablero(tablero: char[][]): void
  +{static} getFilas(): int
  +{static} getColumnas(): int
  +{static} getNumeroMinas(): int
  +{static} getBanderas(): boolean[][]
  +{static} getEncontradas(): boolean[][]
  +{static} getTablero(): char[][]
}

class Minas {
  ~{static} minasAleatorias: int = 0
  --
  +Minas(filas: int, columnas: int, numeroMinas: int, banderas: boolean[][], encontradas: boolean[][], tablero: char[][])
  +{static} colocarMinas(): void
  +{static} minasAlrededor(): void
}

class Celdas {
  -{static} restantes: int
  --
  +Celdas(filas: int, columnas: int, numeroMinas: int, banderas: boolean[][], encontradas: boolean[][], tablero: char[][])
  +{static} celdaValida(fila: int, columna: int): boolean
  +{static} revelarCeldas0(fila: int, columna: int): void
  +{static} revelarCeldas1(): void
  +{static} getRestantes(): int
  +{static} setRestantes(restantes: int): void
}

class CatalogoControlador {
  ~gestor: GestorArchivos = new GestorArchivos()
  +{static} modoBandera: boolean = false
  -vista: MenuVista
  ~{static} Victoria: boolean
  ~{static} Derrota: boolean
  -movimiento: int = new int[2]
  --
  +CatalogoControlador(vista: MenuVista)
  +controladorInicio(): void
  -bucleJuego(): void
  -iniciarPartida(): void
  -pedirMovimiento(): void
  -{static} comprobarVictoria(): boolean
}

class CasillaYaDescubiertaException {
  +CasillaYaDescubiertaException(error: String)
}

class OpcionInvalida {
  +OpcionInvalida(error: String)
}

class ErrorAlGuardarPartida {
  +ErrorAlGuardarPartida(error: String)
}

class ErrorAlCargarPartida {
  +ErrorAlCargarPartida(error: String)
}

class MenuVista {
  -leer: Scanner
  --
  +MenuVista()
  +imprimirTablero(): void
  +menuPrincipal(): int
  +accionJuego(): int
  +mostrarMensaje(mensaje: String): void
  +pedirCoordenada(): String
  +limpiarBuffer(): void
}

Minas --|> PadreBuscaminas
Celdas --|> PadreBuscaminas
Minas --o CatalogoControlador
Celdas --o CatalogoControlador
PadreBuscaminas --o CatalogoControlador
CatalogoControlador --> GestorArchivos
CatalogoControlador *-- MenuVista
@enduml